--- a/build.gradle
+++ b/build.gradle
@@ -62,8 +62,10 @@ uploadArchives {
 }
 
 release {
-    tagTemplate = "v${version}"
+    // tagTemplate = "v${version}"
     git {
         requireBranch = 'release'
     }
 }
+
+// afterReleaseBuild.dependsOn uploadArchives
